fix repository urls

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "name": "react-keyed-file-browser",
+  "name": "@sneakycrow/react-keyed-file-browser",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sneakycrow/react-keyed-file-browser.git"
+  },
   "version": "",
   "description": "Folder based file browser given a flat keyed list of objects, powered by React.",
   "main": "dist/main.js",
@@ -13,10 +17,6 @@
   "files": [
     "dist/**"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uptick/react-keyed-file-browser.git"
-  },
   "keywords": [
     "react",
     "keyed",
