--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   publish-npm:
-    name: publish to github
+    name: publish to npm
     runs-on: ubuntu-latest
     permissions:
       contents: read
