--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm run build
 
       - name: publishing package
-        run: npm publish --access public
+        run: npm publish --access public --tag nightly
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   publish-npm:
@@ -62,6 +62,6 @@ jobs:
         run: npm run build
 
       - name: publishing package
-        run: npm publish --access public
+        run: npm publish --access public --tag nightly
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
