--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "version": "",
   "description": "Folder based file browser given a flat keyed list of objects, powered by React.",
   "main": "dist/main.js",
-  "source": "src/index.ts",
-  "types": "dist/types.d.ts",
+  "source": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "parcel build",
