convert to re-usable flow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,20 @@
 name: publish
 
 on:
-  release:
-    types: [prereleased, released]
-  workflow_dispatch:
+  workflow_call:
+    inputs:
+      tag:
+        required: false
+        default: nightly
+        type: string
+      version:
+        required: true
+        type: string
+    secrets:
+      NPM_TOKEN:
+        required: true
+      GITHUB_TOKEN:
+        required: true
 
 jobs:
   publish-gpr:
@@ -24,7 +35,7 @@ jobs:
 
       - name: update package.json version
         run: |
-          version=${{ github.ref_name }}; echo $(jq --arg version "$version" '.version = $version' package.json) > package.json
+          version=${{ inputs.version }}; echo $(jq --arg version "$version" '.version = $version' package.json) > package.json
 
       - name: install package dependencies
         run: npm ci
@@ -33,7 +44,7 @@ jobs:
         run: npm run build
 
       - name: publishing package
-        run: npm publish --access public --tag nightly
+        run: npm publish --access public --tag ${{ inputs.tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -54,7 +65,7 @@ jobs:
 
       - name: update package.json version
         run: |
-          version=${{ github.ref_name }}; echo $(jq --arg version "$version" '.version = $version' package.json) > package.json
+          version=${{ inputs.version }}; echo $(jq --arg version "$version" '.version = $version' package.json) > package.json
 
       - name: install package dependencies
         run: npm ci
@@ -63,6 +74,6 @@ jobs:
         run: npm run build
 
       - name: publishing package
-        run: npm publish --access public --tag nightly
+        run: npm publish --access public --tag ${{ inputs.tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
